further wrap style adjustments.  fixes #4

--- a/css/plugin-wrap.less
+++ b/css/plugin-wrap.less
@@ -22,32 +22,32 @@
 
     // original background colors darkened
     div.wrap_tip {
-        border-color: darken(#fff79f, 50%);
+        border-color: #fff79f;
         background: linear-gradient(-45deg, #fff79f, transparent);
     }
 
     div.wrap_important {
-        border-color: darken(#ffd39f, 50%);
+        border-color: #ffd39f;
         background: linear-gradient(-45deg, #ffd39f, transparent);
     }
 
     div.wrap_alert {
-        border-color: darken(#ffbcaf, 50%);
+        border-color: #ffbcaf;
         background: linear-gradient(-45deg, #ffbcaf, transparent);
     }
 
     div.wrap_help {
-        border-color: darken(#dcc2ef, 50%);
+        border-color: #dcc2ef;
         background: linear-gradient(-45deg, #dcc2ef, transparent);
     }
 
     div.wrap_download {
-        border-color: darken(#d6efc2, 50%);
+        border-color: #d6efc2;
         background: linear-gradient(-45deg, #d6efc2, transparent);
     }
 
     div.wrap_todo {
-        border-color: darken(#c2efdd, 50%);
+        border-color: #c2efdd;
         background: linear-gradient(-45deg, #c2efdd, transparent);
     }
 }
